--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,6 @@
   <body>
     <div id="root"></div>
     <!-- This script tag below is crucial for Parcel to find your app's entry point (main.jsx) -->
-    <script type="module" src="/src/app.jsx"></script>
+    <script type="module" src="/src/App.jsx"></script>
   </body>
 </html>
