--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./favicon.svg" /> <!-- Make sure favicon.svg is in your /public_html/pollitago folder -->
+    <link rel="icon" type="image/svg+xml" href=".dist/favicon.svg" /> <!-- Make sure favicon.svg is in your /public_html/pollitago folder -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PollItAGo</title>
   </head>
