--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" /> <!-- Make sure favicon.svg is in your /public_html/pollitago folder -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PollItAGo</title>
-  </head>
-  <body>
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg" /> 
+</head>
+<body>
     <div id="root"></div>
-    <!-- This script tag below is crucial for Parcel to find your app's entry point (main.jsx) -->
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+    <script type="module" src="../src/index.js"></script> 
+</body>
 </html>
