--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PollItAGo</title>
-    <link rel="icon" type="image/svg+xml" href="./favicon.svg" /> 
-</head>
-<body>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
+  <body>
     <div id="root"></div>
-    <script type="module" src="../src/index.js"></script> 
-</body>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
